# chuck-max

./: .gitignore  CHANGELOG.md  CMakeLists.txt  DEV-NOTES.md  DEVNOTES.md  LICENSE  Makefile  README.md  TODO.md  package-info.json  taskfile.yml
examples/chugins/Range/: CMakeLists.txt
source/projects/chuck/core/: CMakeLists.txt  chuck.output  chuck.tab.c  chuck.yy.c  chuck_dl.h  chuck_globals.cpp  chuck_instr.cpp
source/projects/chuck/host/: CMakeLists.txt  chuck_main.cpp
source/projects/chuck/host_embed/: CMakeLists.txt  sine.ck
source/projects/chuck_tilde/: CMakeLists.txt  README.md  chuck_tilde.cpp  chuck_tilde.hpp  chuck~.cpp
source/projects/chuck_tilde/dev/: api.cpp  changes.diff  ck_tilde_callbacks.cpp
source/projects/chuck~/: CMakeLists.txt  README.md  chuck~.cpp
source/projects/chuck~/core/: CMakeLists.txt  chuck.output  chuck.tab.c  chuck.yy.c
source/projects/chuck~/host/RtAudio/: RtAudio.cpp
source/projects/chuck~/host_embed/: CMakeLists.txt  chuck-embed.cpp
source/projects/chuck~/host_embed/RtAudio/: RtAudio.cpp
source/projects/chuck~/tests/: chuck~.0.cpp  perform.c
source/projects/chugins/: CMakeLists.txt
source/projects/chugins/AbletonLink/: AbletonLink.cpp  abl_link_instance.cpp
source/projects/chugins/AudioUnit/: AudioUnit-test.ck  AudioUnit.cpp  CMakeLists.txt  README.md
source/projects/chugins/AudioUnit/examples/: 07-midi-routing.ck  07-midi.ck  10-live-input.ck  11-parameter-sweep.ck  12-parameter-by-name.ck  README.md
source/projects/chugins/ConvRev/: CMakeLists.txt  ConvRev.cpp
source/projects/chugins/Elliptic/: CMakeLists.txt
source/projects/chugins/Fauck/: CMakeLists.txt  Faust.cpp  Info.plist  Makefile  README.md
source/projects/chugins/Fauck/_wip/: CMakeLists.lib.cmake  CMakeLists.orig.cmake  CMakeLists.txt
source/projects/chugins/FluidSynth/: CMakeLists.txt
source/projects/chugins/Ladspa/: CMakeLists.txt
source/projects/chugins/MIAP/: CMakeLists.txt
source/projects/chugins/Multicomb/: CMakeLists.txt
source/projects/chugins/NHHall/: CMakeLists.txt
source/projects/chugins/Patch/: Patch.cpp
source/projects/chugins/PitchTrack/: CMakeLists.txt
source/projects/chugins/Random/: CMakeLists.txt
source/projects/chugins/Range/: CMakeLists.txt
source/projects/chugins/RegEx/: CMakeLists.txt  RegEx.cpp
source/projects/chugins/Sigmund/: CMakeLists.txt
source/projects/chugins/Spectacle/: CMakeLists.txt
source/projects/chugins/WPKorg35/: CMakeLists.txt
source/projects/chugins/WarpBuf/: CMakeLists.txt  README.md
source/projects/chugins/XML/: CMakeLists.txt
source/projects/chugins/chuck/include/: chugin.h
source/projects/chugins_my/: CMakeLists.txt  README.md
source/projects/chugins_my/AbletonLink/: API.md  AbletonLink.cpp  CMakeLists.txt  README.md  abl_link_instance.cpp  abl_link_instance.hpp
source/projects/chugins_my/AbletonLink/examples/: Makefile  basic_metronome.ck  drum_machine.ck
source/projects/chugins_my/AudioUnit/: API.md  CMakeLists.txt  README.md
source/projects/chugins_my/AudioUnit/examples/: 01-basic-effect.ck  07-midi-routing.ck  07-midi.ck  09-switch-effects.ck  13-presets.ck
source/projects/chugins_my/CLAP/: .gitignore  API.md  CLAP-test.ck  CLAP.cpp  CMakeLists.txt  README.md
source/projects/chugins_my/CLAP/examples/: 00-list-clap.ck  01-basic-effect.ck  02-parameters.ck  03-dynamic-control.ck  04-bypass.ck  05-instrument.ck  06-midi-simple.ck  07-multiple-effects.ck  08-parameter-sweep.ck  09-parameter-by-name.ck  10-multi-plugin.ck  Clap-midi-demo.ck  Clap-test.ck  Makefile  README.md  TAL-test.ck  test-extensions.ck  test-filter-sweep.ck  test-midi-melody.ck  test-midi.ck  test-preset-loading.ck  test-volume.ck
source/projects/chugins_my/VST3/: .gitignore  CMakeLists.txt  README.md  VST3-test.ck  VST3.cpp  setup.sh
source/projects/chugins_my/VST3/examples/: 00-list-vst3.ck  01-basic-effect.ck  02-parameters.ck  03-dynamic-control.ck  04-bypass.ck  05-instrument.ck  06-midi-simple.ck  07-multiple-effects.ck  08-parameter-sweep.ck  09-parameter-by-name.ck  10-presets.ck  11-preset-by-name.ck  12-midi-control.ck  Makefile  README.md
source/projects/chugl/src/: CMakeLists.txt  ChuGL.cpp  TODO.txt  all.cpp  app.cpp  chugl_defines.h  compressed_fonts.h  geometry.cpp  geometry.h  graphics.cpp  graphics.h  implementations.cpp  main.cpp  makefile  r_component.cpp  r_component.h  sg_command.cpp  sg_command.h  sg_component.cpp  sg_component.h  shaders.h  suzanne_geo.cpp  sync.cpp  tmp.txt  ulib_assloader.cpp  ulib_box2d.cpp  ulib_buffer.cpp  ulib_camera.cpp  ulib_cimgui.cpp  ulib_color.cpp  ulib_component.cpp  ulib_geometry.cpp  ulib_helper.h  ulib_imgui.cpp  ulib_light.cpp  ulib_material.cpp  ulib_pass.cpp  ulib_scene.cpp  ulib_text.cpp  ulib_texture.cpp  (+2 more)
source/projects/chugl/src/core/: file.h  float16_t.hpp  hashmap.c  hashmap.h  log.c  log.h  macros.h  memory.cpp  memory.h  spinlock.h
source/projects/chugl/src/test/: README.md  T.ck  test.ck  test.py
source/projects/chugl/src/test/chugl-tests/: audio_frame_arena_resize_ok.ck  audio_frame_arena_resize_ok.txt  changing_geo_and_mat.ck  gtext_bugs.ck  invalid_skybox.ck  invalid_skybox.txt  invalid_webcam.ck  invalid_webcam.txt  material_change_topology.ck  material_no_uniforms.ck  material_no_uniforms.txt  setting_scenepass_with_foreign_camera_fails.ck  setting_scenepass_with_foreign_camera_fails.txt  shader_gc.ck  shader_gc.txt  shred_on_destroy.ck  (+8 more)
source/projects/chump/: .gitignore  CMakeLists.txt  README.md  VERSIONS  meson.build
source/projects/chump/chump-cli/: CMakeLists.txt  main.cpp
source/projects/chump/chump-demo/: CMakeLists.txt  main.cpp
source/projects/chump/chump-lib/: CMakeLists.txt  chuck_version.cpp  fetch.cpp  manager.cpp  package.cpp  package_list.cpp  util.cpp
source/projects/chump/chumpinate/: CMakeLists.txt  Chumpinate.cpp  build-pkg-linux.ck  build-pkg-win.ck  meson.build
source/projects/chump/chumpinate/tests/: Chumpinate-test.ck  build-pkg-mac.ck  gen-ckdoc.ck  test.txt
source/projects/chump/include/: chuck_version.h  exec.h  fetch.h  manager.h  package.h  package_list.h  util.h
(+349 files in other folders)
